--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -218,5 +218,11 @@ h1,h2,h3,h4,.brand{
   justify-content: center;
 }
 
-footer a{ color:#fff; text-decoration:none; }
-footer a:hover{ text-decoration:underline; }
+footer a{ 
+  color:#fff;
+  text-decoration:none; 
+  }
+footer a:hover{ 
+  text-decoration:underline; 
+}
+
